# ubu-phase0-demo

./: .gitignore  AGENTS.md  PHASE0_ACCEPTANCE_TESTS.md  PHASE0_CLAIM_REGISTER_SPEC.md  PHASE0_CODEGEN_WORKFLOW.md  PHASE0_CONTRACT_PROFILE.md  PHASE0_CUTLIST.md  PHASE0_DEMO_FAILURE_MODES.md  PHASE0_DEMO_SCRIPT.md  PHASE0_GITHUB_INGESTION.md  PHASE0_MODULE_BOUNDARIES.md  PHASE0_PLAN.md  PHASE0_PROCESS.md  PHASE0_PROCESS_REVISED.md  README.md  pyproject.toml
fixtures/: claim_register.json  demo_log_after_task1.json  demo_request.json  demo_response_initial.expected.json  demo_response_replanned.expected.json  impossible_dependency_demo.json  static_dummy_issue.json
tests/: test_affect_gate_rejection.py  test_bootstrap_defaults.py  test_calendar_preview_next_four_hours.py  test_claim_register_completeness.py  test_cli_demo_smoke.py  test_cli_refresh_smoke.py  test_contract_roundtrip.py  test_dependency_overlay.py  test_github_issue_deduplication.py  test_github_issue_fixture_to_tasks.py  test_github_label_mapping.py  test_import_boundaries.py  test_missing_github_token_uses_fixture.py  test_schema_contract.py  test_topological_order.py
tickets/: PHASE0-T001-schema.json  PHASE0-T002-fixtures.json  PHASE0-T003-github-ingest.json  PHASE0-T003-review.md  PHASE0-T004-affect.json  PHASE0-T004-review.md  PHASE0-T005-planner.json  PHASE0-T005-review.md  PHASE0-T006-bootstrap.json  PHASE0-T006-review.md  PHASE0-T007-loop.json  PHASE0-T007-review.md  PHASE0-T008-cli.json  PHASE0-T008-review.md  PHASE0-T009-claim-register.json  PHASE0-T009-review.md  PHASE0-T010-log-replan.json  PHASE0-T011-impossible-graph.json  PHASE0-T012-claims-command.json  PHASE0-T013-recalibrate.json  PHASE0-T015-doctor.json  (+2 more)
(+8 files in other folders)
